fix: bugfix for git merge, feat: enable merge completion with proper parent marking if auto merge not possible